# earthkit-geo

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg
.github/: ci-config.yml  ci-hpc-config.yml
.github/workflows/: ci.yml  ci_other.yml  legacy-ci.yml
docs/: api-reference.rst  conf.py  development.rst  earthkit-packages.yml  faq.rst  getting-started.rst  grids.rst  index.rst  install.rst  installation.rst  references.rst  requirements.txt  why.rst
docs/_static/: custom.css
docs/concepts/: caching.rst  config.rst  grid.rst  index.rst
docs/concepts/include/: config-get.py  config-reset.py  config-set.py  config-temporary.py
docs/concepts/regridding/: gridspec.rst  index.rst
docs/concepts/regridding/mir/: gridspec.rst  index.rst  regrid_array.rst  regrid_high.rst
docs/concepts/regridding/precomputed/: index.rst  memory_cache.rst  regrid_array.rst  regrid_high.rst
docs/examples/: cache.ipynb  config.ipynb  config_env_vars.ipynb  country-polygons.ipynb  country_polygons.ipynb  grids.ipynb  index.rst  memory_cache.ipynb  mir_healpix_fieldlist.ipynb  mir_interpolation_types.ipynb  mir_numpy_array.ipynb  mir_octahedral_fieldlist.ipynb  polygons-polytope.ipynb  precomp_healpix_fieldlist.ipynb  precomp_numpy_array.ipynb  precomp_octahedral_fieldlist.ipynb  rotate.ipynb
docs/examples/geo/: country_polygons.ipynb  rotate.ipynb
docs/examples/misc/: config.ipynb
docs/explanations/: config.rst  index.rst
docs/explanations/mir/: regrid_array.rst  regrid_high.rst
docs/explanations/misc/: caching.rst
docs/explanations/precomputed/: memory_cache.rst
docs/explanations/regridding/mir/: regrid_array.rst  regrid_high.rst
docs/explanations/regridding/precomputed/: gridspec.rst  regrid_array.rst  regrid_high.rst
docs/guide/: index.rst
docs/guide/interpolate/: gridspec.rst
docs/guide/mir/: gridspec.rst  regrid_array.rst  regrid_high.rst
docs/guide/misc/: caching.rst  config.rst  index.rst
docs/guide/precomputed/: memory_cache.rst  regrid_array.rst
docs/guide/regrid/: regrid_array.rst
docs/how-tos/: index.rst
docs/how-tos/geo/: country_polygons.ipynb  index.rst  rotate.ipynb
docs/how-tos/mir/: index.rst  mir_healpix_fieldlist.ipynb  mir_interpolation_types.ipynb  mir_numpy_array.ipynb  mir_octahedral_fieldlist.ipynb
docs/how-tos/misc/: cache.ipynb  config.ipynb  config_env_vars.ipynb  index.rst
docs/how-tos/precomputed/: index.rst  memory_cache.ipynb  precomp_healpix_fieldlist.ipynb  precomp_numpy_array.ipynb  precomp_octahedral_fieldlist.ipynb
docs/release-notes/: index.rst  version_0.2_updates.rst  version_0.3_updates.rst  version_0.5_updates.rst  version_1.0.0rc_updates.rst  version_1.0_updates.rst  version_1.1_updates.rst
docs/release_notes/: version_0.2_updates.rst  version_0.3_updates.rst  version_0.4_updates.rst  version_0.5_updates.rst
docs/tutorials/: index.rst  mir_regrid_xarray.ipynb
earthkit/geo/: __init__.py  constants.py  distance.py  figure.py  grid.py  latlon.py
regrid_merge/: pyproject.toml
regrid_merge/docs/guide/mir/: index.rst
regrid_merge/tests/interpolate/: test_matrix_memcache.py
regrid_merge/tests/inventory/: test_gridspec.py
regrid_merge/tests/regrid_mir/: test_regrid_numpy.py  test_regrid_xarray.py
src/earthkit/geo/: __init__.py  cartography.py  constants.py  coord.py  distance.py  figure.py  gisco.py  grid.py  grids.py  polygons.py  rotate.py  testing.py  wind.py
src/earthkit/geo/grids/: __init__.py  array.py
src/earthkit/geo/regrid/: __init__.py  array.py  gridspec.py  regrid.py
src/earthkit/geo/sphinxext/: generate_config_env_rst.py  generate_config_rst.py  generate_inventory_rst.py  module_output.py
tests/: conftest.py  downstream-ci-requirements.txt  environment-unit-tests.yml  test_cartography.py  test_coord.py  test_distance.py  test_eccodes_grid_spec.py  test_grid.py  test_grids.py  test_polygons.py  test_rotate.py  testing.py
tests/data/: .gitignore  global_ll_ref.json  rotated_wind_20x20_input.npz  rotated_wind_20x20_ref.npz
tests/distance/: test_distance.py
tests/grid/: test_generate_latlon.py  test_grid.py
tests/interpolate/: test_matrix_interpolate_fieldlist.py
tests/regrid/inventory/: test_gridspec.py  test_inventory.py
tests/regrid/regrid_backends/: test_backend_local_matrix.py  test_backend_matrix.py  test_backend_matrix_memcache.py  test_matrix_fieldlist.py  test_matrix_xarray.py  test_remote_index.py
tests/regrid/regrid_mir/: test_mir_grid.py  test_regrid_fieldlist.py  test_regrid_grib_message.py  test_regrid_numpy.py  test_regrid_xarray.py
tests/regrid_mir/: test_regrid_numpy.py
tests/utils/: test_cache.py  test_config.py  test_make_matrix.py  test_url.py
tests/wind/: test_wind.py
tools/: make-matrix.sh
tools/manage/: test_db.py
tools/subset/: subset_remote_db.py
tools/utils/: matrix.py
(+53 files in other folders)
