[build-system]
requires = ["setuptools>=61", "setuptools-scm>=8"]

[project]
authors = [
  {name = "European Centre for Medium-Range Weather Forecasts (ECMWF)", email = "software.support@ecmwf.int"}
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy"
]
dependencies = [
  "eckit==2.0.6.17",
  "mir-python==1.28.1.17",
  "multiurl",
  "pyproj",
  "pyyaml",
  "requests",
  "scipy"
]
description = "Geospatial computations"
dynamic = ["version"]
license = {text = "Apache License Version 2.0"}
name = "earthkit-geo"
readme = "README.md"
requires-python = ">=3.10"
optional-dependencies.all = ["cartopy"]
optional-dependencies.cartography = ["cartopy"]
optional-dependencies.ci = [
  "earthkit-utils>=1.0.0rc0",
  "earthkit-data>=1.0.0rc0",
  "pytest",
  "pytest-cov",
  "requests",
  "cartopy",
  "scipy",
  "pyproj"
]
optional-dependencies.dev = [
  "earthkit-geo[all,docs,test]"
]
optional-dependencies.docs = [
  "docutils",
  "furo",
  "ipykernel",
  "nbconvert",
  "nbsphinx",
  "pygments>=2.6.1",
  "setuptools",
  "sphinx>=7.3.7",
  "sphinx-autoapi",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-issues"
]
optional-dependencies.test = [
  "earthkit-utils>=1.0.0rc0",
  "earthkit-data>=1.0.0rc0",
  "pytest",
  "pytest-cov"
]
urls.Documentation = "https://earthkit-geo.readthedocs.io/"
urls.Homepage = "https://github.com/ecmwf/earthkit-geo/"
urls.Issues = "https://github.com/ecmwf/earthkit-geo/issues"
urls.Repository = "https://github.com/ecmwf/earthkit-geo/"

[tool.coverage.run]
branch = "true"

[tool.pydocstyle]
add_ignore = ["D1", "D200", "D205", "D400", "D401"]
convention = "numpy"

[tool.ruff]
line-length = 120
preview = true
lint.ignore = [
  "D1",  # pydocstyle: Missing Docstrings
  "D107",  # pydocstyle: numpy convention
  "D203",
  "D205",
  "D212",
  "D213",
  "D400",
  "D401",
  "D402",
  "D413",
  "D415",
  "D416",
  "D417"
]
lint.select = [
  "D",  # pydocstyle
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
  "W"  # pycodestyle warnings
]

[tool.setuptools.packages.find]
include = ["earthkit.geo"]
where = ["src/"]

[tool.setuptools_scm]
version_file = "src/earthkit/geo/_version.py"
